--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -873,6 +873,7 @@ html.transition *:after {
   .post-meta {
     color: var(--global-text-color-light);
     font-size: 0.875rem;
+    font-family:'Times New Roman', Times, serif;
     margin-bottom: 0;
   }
 
